--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,7 @@
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
+        <img src="/images/logo.jpg", height="56px">
       </div>
     </nav>
 
