--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,7 +5,7 @@
     border-top: 1px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 60px;
-    background-image: url("http://127.0.0.1:4000/images/background.jpg");
+    background-image: url("/images/background.jpg");
 
     // Positioning context for the mobile navigation icon
     position: relative;
