changed code bg colour

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -132,7 +132,8 @@ code {
     font-size: 15px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
-    background-color: #eef;
+    /*background-color: #eef;*/
+    background-color: #D2DCE2;
 }
 
 code {
