--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     ga('send', 'pageview');
 
   </script>
-  <link rel="shortcut icon" type="image/png" href="http://yankev.github.io/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="http://yankev.github.io/favicon.png?=v2">
   
   <div class="wrapper">
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
