--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,16 +2,17 @@
  * Site header
  */
 .site-header {
-    border-top: 1px solid $grey-color-dark;
+    background-image: url(../images/abstract-patterns_00394702.jpg);
+    background-size: cover;
     border-bottom: 1px solid $grey-color-light;
-    min-height: 60px;
-    background-image: url("/images/background.jpg");
+    min-height: 56px;
 
     // Positioning context for the mobile navigation icon
     position: relative;
 }
 
 .site-title {
+    color: #e8e8e8;
     font-size: 30px;
     font-weight: 300;
     line-height: 56px;
@@ -21,7 +22,8 @@
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: rgba(#e7ebee, 0.85);
+
     }
 }
 
@@ -34,7 +36,7 @@
     }
 
     .page-link {
-        color: $text-color;
+        color: #e8e8e8;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the last one
